feat: add StringStatistics and finish StatisticsManager
- Add missing statistics classes
- Rename ArgsParser to ProcessFilesApp to better fit into its function
- Add Javadoc support in Gradle configuration